# relief-probe

./: .gitignore  CONTRIBUTING.md  NEXT_STEPS.md  README.md  RESPONSIBLE_USE.md  RESULTS.md  pyproject.toml  requirements.txt
.claude/commands/: ralph-cancel.md  ralph-loop.md
.github/workflows/: test.yml
.streamlit/: config.toml
app/: dashboard.py
docs/: DEPLOY.md  EXAMPLE_OUTPUT.md  LABEL_PRECISION.md  LLM_RESEARCH.md  M7_PLAN.md  NEXT_STEPS.md  PROSECUTION_PATTERN.md  README.md  RESULTS.md
plans/: README.md  guardrails.md  prd.json  progress.md
scripts/: make_readme_figures.py  validate_amount_llm_precision.py  validate_business_recency.py  validate_learned_scorer.py  validate_naics_mismatch.py  validate_ring_graph.py  validate_similar_homophily.py
scripts/ralph/: ralph-status.sh  ralph-stop.sh  ralph-tail.sh  ralph.sh
src/relief_probe/: __init__.py  cli.py  config.py  embeddings.py  scoring.py  stats.py
src/relief_probe/agent/: __init__.py  graph.py  mcp_server.py  report.py  tools.py
src/relief_probe/benchmark/: __init__.py  core.py
src/relief_probe/demo/: __init__.py  seed.py
src/relief_probe/detectors/: __init__.py  _address.py  _cohort.py  _entity.py  amount_anomaly.py  base.py  business_recency.py  duplicate_address_ring.py  establishment_overcount.py  lender_concentration.py  multiple_funded_loans.py  naics_cohort_outlier.py  naics_mismatch.py  payroll_cap.py  registry.py  runner.py
src/relief_probe/graph/: __init__.py  build.py  detector.py  features.py
src/relief_probe/ingest/: __init__.py  download.py  establishments.py  loader.py  naics.py  runner.py  sources.py
src/relief_probe/kyb/: __init__.py  enrich.py  provider.py
src/relief_probe/labels/: __init__.py  doj.py  llm_resolve.py  resolve.py
src/relief_probe/scorer/: __init__.py  features.py  lgbm.py  pu_bagging.py  validate.py
src/relief_probe/similarity/: __init__.py  core.py  explain.py
src/relief_probe/triage/: __init__.py  core.py  gate.py  judge.py
src/relief_probe/vision/: __init__.py  datasets.py  ela.py  model.py
src/relief_probe/warehouse/: __init__.py  db.py
tests/: test_address.py  test_agent_graph.py  test_agent_report.py  test_agent_tools.py  test_amount_anomaly.py  test_benchmark.py  test_business_recency.py  test_cli_ingest_establishments.py  test_config.py  test_demo_seed.py  test_detectors.py  test_entity.py  test_establishment_overcount.py  test_establishments_loader.py  test_figures_data.py  test_graph_build.py  test_graph_features.py  test_ingest.py  test_kyb_enrich.py  test_kyb_provider.py  test_labels.py  test_lender_concentration.py  test_lgbm_scorer.py  test_llm_resolve.py  test_mcp_server.py  test_multiple_funded_loans.py  test_naics_mismatch.py  test_nested_validation.py  test_registry.py  test_resolve.py  test_ring_detector.py  test_scorer.py  test_scorer_features_rich.py  test_similarity.py  test_triage.py  test_validate_business_recency.py  test_validate_learned_scorer.py  test_validate_ring_graph.py  test_vision.py
