[project]
name = "relief-probe"
version = "0.1.0"
description = "Open-source PPP/SBA pandemic-loan fraud-lead lab — anomaly detection over public loan data, validated against future DOJ fraud prosecutions, with an agentic investigation layer and a document-authenticity (vision) tab."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "requests>=2.31",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Agentic investigation layer + MCP server (kept out of core so the
# ingest → detector → benchmark path stays lightweight and offline-friendly).
agent = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "mcp>=1.0",
]
# Read-only demo dashboard.
viz = ["streamlit>=1.37"]
# Learned-scorer experiment (supervised PU-learning vs the transparent baseline).
ml = ["scikit-learn>=1.4"]
# Document-authenticity vision tab (ID-forgery + amount-tamper detection).
vision = ["pillow>=10.0", "scikit-learn>=1.4"]

[project.scripts]
relief-probe = "relief_probe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relief_probe"]

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
